<resources>
    <string name="app_name">Tech Week Schedule 2022</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main4">MainActivity4</string><!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="v_return">Return</string>
    <string name="v_day1">Monday</string>
    <string name="v_day2">Tuesday</string>
    <string name="v_day3">Wednesday</string>
    <string name="v_day4">Thursday</string>
    <string name="v_day5">Friday</string>
    <string name="v_time">Time</string>
    <string name="v_presenter">Presenter</string>
    <string name="v_description">Description</string>
    <string name="v_activityMode">Activity mode</string>
    <string name="v_learningActivity">Learning activity</string>
    <string name="v_language">Language</string>
    <string name="welcome_to_techweek_admin">Welcome to Techweek!</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="not_registered_please_signup">Not registered? please signup!</string>
    <string name="signup">SignUp</string>
    <string name="not_interested_click_on_the_agenda">Not interested? Click on the agenda!</string>
    <string name="agenda">Agenda</string>
    <string name="register">Register</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="presenterProfile">Profile</string>
    <string name="manage_activities">manage activities</string>
    <string name="log_out">Log out</string>
    <string name="activity_information">Activity information</string>
    <string name="time">Time</string>
    <string name="day">Day</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="add">Add</string>
    <string name="browse">Browse</string>
    <string name="activity_mode">Activity mode</string>
    <string name="activities">Activities</string>
</resources>