<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient1">


    <!-- TextView for heading -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="271dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo4"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_techweek_admin"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"/>

    <!-- Edit text for email -->
    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:background="@color/white"/>

    <!-- Edit text for password -->
    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:background="@color/white"/>



    <!-- Button for Login with text "Login" -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered_please_signup"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_interested_click_on_the_agenda"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnAgenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agenda"
        />

    <!-- ProgressBar for Loading Time -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>