<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".RegistrationActivity"
    android:background="@drawable/gradient1"
    >

    <ImageView
        android:id="@+id/imgPresenter"
        android:layout_width="206dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/noimage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_techweek_admin"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        />

    <!-- TextView for heading -->
    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <!-- Edit text for email -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:background="@color/white"/>

    <!-- Edit text for password -->
    <EditText
        android:id="@+id/passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:background="@color/white"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_full_name"
        android:inputType="textPersonName"
        android:background="@color/white"/>





    <!-- Button for register with text "Register" -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:visibility="visible"/>

    <!-- ProgressBar for loading time -->
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>