<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".PresenterProfileActivity"
    android:background="@drawable/gradient1">


    <!-- TextView for heading -->
    <TextView
        android:id="@+id/tvPresenterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome back!"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvPresenterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:layout_gravity="center"
        android:textColor="@color/white"/>



    <!-- Button for Login with text "Login" -->
    <Button
        android:id="@+id/btnPresenterProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/presenterProfile"
        android:gravity="left"/>
    <Button
        android:id="@+id/btnManageActivities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_activities"
        android:gravity="left"
        />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:gravity="center"

        />
    <!-- ProgressBar for Loading Time -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />



</LinearLayout>