<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient1">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_marginRight="2sp">



        <ImageView
            android:id="@+id/imgPresenter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_gravity="center"/>






    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp">

        <TextView
            android:id="@+id/tvPresenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="................"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"

            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp">

        <TextView
            android:id="@+id/tvActivityName"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/v_time"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="left"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="................"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="left"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/v_activityMode"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="left"
            android:textStyle="bold"/>




        <TextView
            android:id="@+id/tvActivityMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="................"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="left
"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/v_learningActivity"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="left"
            android:textStyle="bold"/>




        <TextView
            android:id="@+id/tvLearningActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="................"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="left
"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/v_language"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="left"
            android:textStyle="bold"/>




        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="................"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="left
"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp">



        <TextView

            android:layout_width="match_parent"
            android:gravity="left"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"
            android:text="@string/v_description"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp">

        <TextView
            android:id="@+id/tvActivityDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_weight="1"
            android:lines="9"

            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/v_return"
            android:layout_gravity="center"/>

    </LinearLayout>




</LinearLayout>